--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,12 @@ body {
   padding: 0;
   border: 1px dashed green;
   min-width: 20rem;
+  max-height: 20rem;
+  overflow: scroll;
+}
+
+.list::-webkit-scrollbar {
+  display: none;
 }
 
 .overview-container {
