--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+:root {
+  --background:  hsl(222, 22%, 90%);
+  --light:  hsl(222, 50%, 100%);
+  --shadow: hsl(222, 22%, 70%);
+}
+
+
 * {
   margin: 0;
   border: 0;
@@ -9,27 +16,38 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background-color: var(--background);
 }
 
 .container {
-  border: 1px solid black;
   min-height: 10rem;
   flex-grow: 1;
 }
 
 .search-container {
   flex: 0 1 30vh;
-
+  
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  
 }
 
 .search {
-  border: 1px solid red;
   min-width: 20rem;
   min-height: 3rem;
   font-size: 2rem;
+  padding-left: 1rem;
+  
+  border-radius: .2rem;
+  box-shadow: 0 .5rem .5rem var(--shadow);
+  background-color: var(--light);
+  outline: none;
+}
+
+.search:focus {
+  border: .1rem solid var(--shadow);
+  
 }
 
 .list-container {
@@ -41,18 +59,28 @@ body {
 .list {
   list-style: none;
   padding: 0;
-  border: 1px dashed green;
   min-width: 20rem;
   max-height: 20rem;
   overflow: scroll;
+
+  font-size: 1rem;
+
+  box-shadow: 0 .5rem .5rem var(--shadow);
+  border-radius: 0 0 .2rem .2rem;
+  background-color: var(--light);
 }
 
 .list::-webkit-scrollbar {
   display: none;
 }
 
-.list:hover {
+li {
+  padding-left: 1rem;
+}
+
+li:hover {
   cursor: pointer;
+  background-color: var(--background);
 }
 
 .overview-container {
