--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,52 +2,54 @@
   --background:  hsl(222, 22%, 90%);
   --light:  hsl(222, 50%, 100%);
   --shadow: hsl(222, 22%, 70%);
+  --text-color: hsl(222, 10%, 25%);
 }
 
 
 * {
   margin: 0;
   border: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  /* background: linear-gradient(to bottom, hsl(10, 10%, 90%) 0%, hsl(10, 10%, 80%) 100%); */
   display: flex;
   flex-direction: column;
   height: 100vh;
   background-color: var(--background);
+  color: var(--text-color);
 }
 
 .container {
-  min-height: 10rem;
   flex-grow: 1;
 }
 
 .search-container {
-  flex: 0 1 30vh;
+  flex: 0 1 20vh;
   
   display: flex;
   justify-content: center;
   align-items: flex-end;
   
+  background-color: hsl(222, 50%, 95%);
 }
 
 .search {
-  min-width: 20rem;
-  min-height: 3rem;
+  width: 20rem;
+  height: 3rem;
   font-size: 2rem;
-  padding-left: 1rem;
+  padding: 0 0 0 1rem;
+  color: var(--text-color);
   
-  border-radius: .2rem;
+  border-radius: .2rem .2rem 0 0;
   box-shadow: 0 .5rem .5rem var(--shadow);
   background-color: var(--light);
   outline: none;
 }
 
 .search:focus {
-  border: .1rem solid var(--shadow);
-  
+  border: .05rem solid var(--shadow);
 }
 
 .list-container {
@@ -57,17 +59,23 @@ body {
 }
 
 .list {
-  list-style: none;
   padding: 0;
-  min-width: 20rem;
-  max-height: 20rem;
+  width: 20rem;
+  max-height: 10rem;
   overflow: scroll;
-
+  
   font-size: 1rem;
-
+  
+  border: .05rem solid var(--shadow);
+  border-top: none;
+  list-style: none;
   box-shadow: 0 .5rem .5rem var(--shadow);
   border-radius: 0 0 .2rem .2rem;
   background-color: var(--light);
+}
+
+.list:empty {
+  border: none;
 }
 
 .list::-webkit-scrollbar {
@@ -75,7 +83,7 @@ body {
 }
 
 li {
-  padding-left: 1rem;
+  padding: .1rem 0 .1rem 1rem;
 }
 
 li:hover {
