plot forecast chart

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,3 +95,22 @@ li:hover {
   display: none;
 }
 
+.overview-container--show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+}
+
+
+.axis path,
+    .axis line {
+      fill: none;
+      stroke: black;
+      shape-rendering: crispEdges;
+    }
+
+    .axis text {
+      font-family: sans-serif;
+      font-size: 11px;
+    }
